# mlflow-sharinghub

./: .dockerignore  .env.template  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Makefile  NOTICE  README.md  pyproject.toml  requirements-dev.txt  requirements-tests.txt  tox.ini
.github/workflows/: publish.yml  test.yml
.gitlab/merge_request_templates/: default.md
deploy/helm/mlflow-sharinghub/: Chart.yaml  values.yaml
deploy/helm/mlflow-sharinghub/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  hpa.yaml  ingress.yaml  pvc.yaml  service.yaml  serviceaccount.yaml
deploy/helm/mlflow-sharinghub/templates/tests/: test-connection.yaml
src/mlflow_sharinghub/: __init__.py  app.py  config.py  filters.py  initializers.py  patch.py  permissions.py  validators.py
src/mlflow_sharinghub/_internal/: __init__.py  server.py  store.py
src/mlflow_sharinghub/auth/: __init__.py  api.py  client.py  views.py
src/mlflow_sharinghub/auth/templates/auth/: index.html
src/mlflow_sharinghub/clients/: __init__.py  base.py  factory.py  gitlab.py  sharinghub.py
src/mlflow_sharinghub/handlers/: __init__.py  after.py  before.py
src/mlflow_sharinghub/hooks/: __init__.py  after.py  before.py
src/mlflow_sharinghub/hooks/handlers/: __init__.py  filters.py  initializers.py  patch.py  validators.py
src/mlflow_sharinghub/utils/: __init__.py  gitlab.py  http.py  session.py
tests/: test_package.py
