[build-system]
requires = ["hatchling >= 1.25.0", "hatch-vcs >= 0.4.0"]
build-backend = "hatchling.build"

# -----------------------------------------------
# Package infos

[project]
name = "mlflow_sharinghub"
description = "MLflow server plugin for SharingHub integration"
authors = [
    { name = "Clément GUICHARD", email = "clement.guichard@csgroup.eu" },
]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"
keywords = [
    "mlflow",
    "sharinghub",
    "gitlab",
    "openid",
    "authenticated",
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Framework :: Flask",
    "Environment :: Plugins",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Intended Audience :: Science/Research",
    "Operating System :: POSIX :: Linux",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: GIS",
    "Natural Language :: English",
    "Typing :: Typed",
]
dependencies = [
    "authlib~=1.3.0",
    "cachelib~=0.13",
    "mlflow~=2.14.1",
    "setuptools",
    "requests~=2.31",
    "Flask-Session~=0.8",
    "Flask~=3.0",
    "python-dotenv~=1.0",
]
dynamic = ["version"]

[project.urls]
"Homepage" = " https://github.com/csgroup-oss/mlflow-sharinghub"
"Source" = " https://github.com/csgroup-oss/mlflow-sharinghub"
"Bug Tracker" = "https://github.com/csgroup-oss/mlflow-sharinghub/issues"

[project.optional-dependencies]
all = [
    "mlflow_sharinghub[postgres,s3]",
]
postgres = [
    "psycopg2~=2.9",
]
s3 = [
    "boto3~=1.34",
]

[project.entry-points."mlflow.app"]
sharinghub = "mlflow_sharinghub.app:create_app"

# -----------------------------------------------
# Build & Packaging

[tool.hatch.build]
skip-excluded-dirs = true

[tool.hatch.version]
source = "vcs"
fallback-version = "0.0.0"

[tool.hatch.version.raw-options]
version_scheme = "python-simplified-semver"

[tool.commitizen]
version_provider = "scm"
annotated_tag = true
changelog_incremental = true
change_type_order = ["Features", "Bug fixes", "Perf", "Internal"]

[tool.commitizen.change_type_map]
feat = "Features"
fix = "Bug fixes"
refactor = "Internal"
perf = "Perf"

# -----------------------------------------------
# Tests

[tool.pytest.ini_options]
minversion = "8.0"
required_plugins = [
    "pytest-cov",
    "pytest-html",
]
testpaths = [
    "src",
    "tests",
]
addopts = [
    "--doctest-modules",
    # pytest-cov
    "--cov=src",
    "--cov-config=pyproject.toml",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
    # pytest-html
    "--html=tests-reports/index.html",
    "--self-contained-html",
]

[tool.coverage.run]
branch = true
parallel = true
omit = [
    "tests/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __str__",
    "def __repr__",
    "if self.debug",
    "if __name__ == .__main__.:",
    "raise AssertionError",
    "raise NotImplementedError",
]

[tool.coverage.html]
directory = "tests-reports/coverage"

[tool.coverage.xml]
output = "tests-reports/coverage.xml"

# -----------------------------------------------
# Linters

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 72

[tool.ruff.lint]
select = [
    "F", # PyFlakes
    "E", "W", # pycodestyle
    "C90", # mccabe
    "I", # isort
    "N", # pep8-naming
    "D", # pydocstyle
    "UP", # pyupgrade
    "ERA", # eradicate
    "PGH", # pygrep-hooks
    "PL", # Pylint
    "TRY", # tryceratops
    "FLY", # flint
    "PERF", # Perflint
    "RUF", # Ruff
    # flake8-* plugins
    "A", "ANN", "ARG", "ASYNC", "B", "BLE", "C4", "COM", "DTZ", "EM", "EXE", "FIX",
    "G", "INP", "ISC", "LOG", "PIE", "PT", "PTH", "PYI", "Q", "RET", "RSE", "S",
    "SIM", "SLF", "SLOT", "T20", "TCH", "TID", "YTT",
]
ignore = [
    "ANN101", "ANN102", "ANN401", "D105", "D107", "D203", "D213", "D417", "RET504",
    # Formatter compatibility (https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules)
    "W191", "E111", "E114", "E117", "D206", "D300", "Q000", "Q001", "Q002", "Q003",
    "COM812", "COM819", "ISC001", "ISC002",
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402", "F401"]
"tests/**/*.py" = ["INP001", "ANN201", "S101"]

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true

[tool.ruff.lint.flake8-unused-arguments]
ignore-variadic-names = true

[tool.ruff.lint.pydocstyle]
convention = "google"
